k8s/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: storage.local
      http:
        paths:
          - path: /minio-api
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
          - path: /minio-ui
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9002
